--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,286 +5,109 @@
     }
   },
   "MENUITEMS": {
-    "MENU": {
-      "TEXT": "MENU"
+    "GENERAL": {
+      "TEXT": "GENERAL"
     },
     "DASHBOARD": {
-      "TEXT": "Dashboards",
-      "BADGE": "New",
+      "TEXT": "Dashboard"
+    },
+    "CONFIGURATIONS": {
+      "TEXT": "Configurations",
       "LIST": {
-        "ANALYTICS": "Analytics",
-        "CRM": "CRM",
-        "ECOMMERCE": "Ecommerce",
-        "CRYPTO": "Crypto",
-        "PROJECTS": "Projects",
-        "NFT": "NFT",
-        "JOB": "Job"
+        "CLASSES": "Classes",
+        "SECTIONS": "Sections",
+        "SUBJECTS": "Subjects",
+        "GRADING": "Grading",
+        "COURSES": "Courses",
+        "SCHOOL": "School"
       }
     },
-    "APPS": {
-      "TEXT": "Apps",
+    "GRADING": {
       "LIST": {
-        "CALENDAR": "Calendar",
-        "MAINCALENDAR": "Main Calendar",
-        "MONTHGRID": "Month Grid",
-        "CHAT": "Chat",
-        "EMAIL": "Email",
-        "MAILBOX": "Mailbox",
-        "MAILTEMPLATES": "Email Templates",
-        "BASICACTION": "Basic Action",
-        "ECOMMERCEACTION": "Ecommerce Action",
-        "ECOMMERCE": "Ecommerce",
-        "PRODUCTS": "Products",
-        "PRODUCTDETAILS": "Product Details",
-        "CREATEPRODUCT": "Create Product",
-        "ORDERS": "Orders",
-        "ORDERDETAILS": "Order Details",
-        "CUSTOMERS": "Customers",
-        "SHOPPINGCART": "Shopping Cart",
-        "CHECKOUT": "Checkout",
-        "SELLERS": "Sellers",
-        "SELLERDETAILS": "Seller Details",
-        "PROJECTS": "Projects",
-        "LIST": "List",
-        "OVERVIEW": "Overview",
-        "CREATEPROJECT": "Create Project",
-        "TASK": "Tasks",
-        "KANBANBOARD": "Kanban Board",
-        "LISTVIEW": "List View",
-        "TASKDETAILS": "Task Details",
-        "CRM": "CRM",
-        "CONTACTS": "Contacts",
-        "COMPANIES": "Companies",
-        "DEALS": "Deals",
-        "LEADS": "Leads",
-        "CRYPTO": "Crypto",
-        "TRANSACTIONS": "Transactions",
-        "BUY&SELL": "Buy & Sell",
-        "MYWALLET": "My Wallet",
-        "ICOLIST": "ICO List",
-        "KYCAPPLICATION": "KYC Application",
-        "INVOICES": "Invoices",
-        "DETAILS": "Details",
-        "CREATEINVOICE": "Create Invoice",
-        "SUPPORTTICKETS": "Support Tickets",
-        "TICKETDETAILS": "Ticket Details",
-        "NFTMARKETPLACE": "NFT Marketplace",
-        "MARKETPLACE": "Marketplace",
-        "EXPLORENOW": "Explore Now",
-        "LIVEAUCTION": "Live Auction",
-        "ITEMDETAILS": "Item Details",
-        "COLLECTIONS": "Collections",
-        "CREATORS": "Creators",
-        "RANKING": "Ranking",
-        "WALLETCONNECT": "Wallet Connect",
-        "CREATENFT": "Create NFT",
-        "FILEMANAGER": "File Manager",
-        "TODO": "To Do",
-        "JOBS": "Jobs",
-        "STATISTICS": "Statistics",
-        "JOBLISTS": "Job Lists",
-        "GRID": "Grid",
-        "CANDIDATELISTS": "Candidate Lists",
-        "GRIDVIEW": "Grid View",
-        "APPLICATION": "Application",
-        "NEWJOB": "New Job",
-        "COMPANIESLIST": "Companies List",
-        "JOBCATEGORIES": "Job Categories",
-        "APIKEY": "API Key"
+        "GRADINGSYSTEMS": "Grading Systems",
+        "GRADESETUP": "Grade Setup"
       }
     },
-    "LAYOUTS": {
-      "TEXT": "Layouts",
+    "CORE": {
+      "TEXT": "CORE"
+    },
+    "PERSONNEL": {
+      "TEXT": "Personnel",
       "LIST": {
-        "HORIZONTAL": "Horizontal",
-        "DETACHED": "Detached",
-        "TWOCOLUMN": "Two Column",
-        "HOVERED": "Hovered"
+        "STAFF": "Staff",
+        "TEACHERS": "Teachers"
       }
     },
-    "PAGES": {
-      "TEXT": "Pages"
-    },
-    "AUTHENTICATION": {
-      "TEXT": "Authentication",
+    "STUDENTS": {
+      "TEXT": "Students",
       "LIST": {
-        "BASIC": "Basic",
-        "COVER": "Cover",
-        "SIGNIN": "Sign In",
-        "SIGNUP": "Sign Up",
-        "PASSWORDRESET": "Password Reset",
-        "PASSWORDCREATE": "Password Create",
-        "LOCKSCREEN": "Lock Screen",
-        "LOGOUT": "Logout",
-        "SUCCESSMESSAGE": "Success Message",
-        "TWOSTEPVERIFICATION": "Two Step Verification",
-        "ERRORS": "Errors",
-        "404BASIC": "404 Basic",
-        "404COVER": "404 Cover",
-        "404ALT": "404 Alt",
-        "500": "500",
-        "OFFLINE": "Offline Page"
+        "REGISTRATION": "Registration",
+        "ENROLLMENTS": "Enrollments"
       }
     },
-    "PAGES": {
-      "TEXT": "Pages",
+    "PARENTS": {
+      "TEXT": "Parents"
+    },
+    "ACADEMICS": {
+      "TEXT": "Academics",
       "LIST": {
-        "STARTER": "Starter",
-        "PROFILE": "Profile",
-        "SIMPLEPAGE": "Simple Page",
-        "SETTINGS": "Settings",
-        "TEAM": "Team",
-        "TIMELINE": "Timeline",
-        "FAQS": "FAQs",
-        "PRICING": "Pricing",
-        "GALLERY": "Gallery",
-        "MAINTENANCE": "Maintenance",
-        "COMINGSOON": "Coming Soon",
-        "SITEMAP": "Sitemap",
-        "SEARCHRESULTS": "Search Results",
-        "PRIVACYPOLICY": "Privacy Policy",
-        "TERMS&CONDITIONS": "Term & Conditions"
+        "ACADEMICYEARS": "Years",
+        "ACADEMICTERMS": "Terms",
+        "ACADEMICPERIODS": "Periods"
       }
     },
-    "LANDING": {
-      "TEXT": "Landing",
+    "ATTENDANCE": {
+      "TEXT": "Attendance",
       "LIST": {
-        "ONEPAGE": "One Page",
-        "NFTLANDING": "NFT Landing",
-        "JOB": "Job"
+        "STUDENTATTENDANCE": "Students",
+        "TEACHERATTENDANCE": "Teachers"
       }
     },
-    "COMPONENTS": {
-      "TEXT": "Components"
+    "EXAMS": {
+      "TEXT": "Exam"
     },
-    "BASEUI": {
-      "TEXT": "Base UI",
+    "RESULTS": {
+      "TEXT": "Results",
       "LIST": {
-        "ALERTS": "Alerts",
-        "BADGES": "Badges",
-        "BUTTONS": "Buttons",
-        "COLORS": "Colors",
-        "CARDS": "Cards",
-        "CAROUSEL": "Carousel",
-        "DROPDOWNS": "Dropdowns",
-        "GRID": "Grid",
-        "IMAGES": "Images",
-        "TABS": "Tabs",
-        "ACCORDION&COLLAPSE": "Accordion & Collapse",
-        "MODALS": "Modals",
-        "OFFCANVAS": "Offcanvas",
-        "PLACEHOLDERS": "Placeholders",
-        "PROGRESS": "Progress",
-        "NOTIFICATIONS": "Notifications",
-        "MEDIAOBJECT": "Media object",
-        "EMBEDVIDEO": "Embed Video",
-        "TYPOGRAPHY": "Typography",
-        "LISTS": "Lists",
-        "LINKS": "Links",
-        "GENERAL": "General",
-        "RIBBONS": "Ribbons",
-        "UTILITIES": "Utilities"
+        "REGISTERRESULTS": "Register Results",
+        "RESULTHISTORY": "Result History"
       }
     },
-    "ADVANCEUI": {
-      "TEXT": "Advance UI",
+    "REPORTS": {
+      "TEXT": "Reports",
       "LIST": {
-        "SWEETALERTS": "Sweet Alerts",
-        "NESTABLELIST": "Nestable List",
-        "SCROLLBAR": "Scrollbar",
-        "ANIMATION": "Animation",
-        "TOUR": "Tour",
-        "SWIPERSLIDER": "Swiper Slider",
-        "RATTINGS": "Ratings",
-        "HIGHLIGHT": "Highlight",
-        "SCROLLSPY": "ScrollSpy"
+        "REPORTCARDS": "Report Cards",
+        "TRANSCRIPTS": "Transcripts",
+        "MASTERSHEETS": "Master Sheets"
       }
     },
-    "WIDGETS": {
-      "TEXT": "Widgets"
+    "LIBRARY": {
+      "TEXT": "Library",
+      "LIST": {}
     },
-    "FORMS": {
-      "TEXT": "Forms",
+    "INVENTORY": {
+      "TEXT": "Inventory",
+      "LIST": {}
+    },
+    "FINANCE": {
+      "TEXT": "Finance",
       "LIST": {
-        "BASICELEMENTS": "Basic Elements",
-        "FORMSELECT": "Form Select",
-        "CHECKBOXS&RADIOS": "Checkboxs & Radios",
-        "PICKERS": "Pickers",
-        "INPUTMASKS": "Input Masks",
-        "ADVANCED": "Advanced",
-        "RANGESLIDER": "Range Slider",
-        "VALIDATION": "Validation",
-        "WIZARD": "Wizard",
-        "EDITORS": "Editors",
-        "FILEUPLOADS": "File Uploads",
-        "FORMLAYOUTS": "Form Layouts"
+        "SUBSCRIPTIONS": "Subscriptions"
       }
     },
-    "TABLES": {
-      "TEXT": "Tables",
-      "LIST": {
-        "BASICTABLES": "Basic Tables",
-        "GRIDJS": "Grid Js",
-        "LISTJS": "List Js",
-        "DATATABLES": "Datatables"
-      }
+    "BOARDING": {
+      "TEXT": "Boarding",
+      "LIST": {}
     },
-    "CHARTS": {
-      "TEXT": "Charts",
-      "LIST": {
-        "APEXCHARTS": "Apexcharts",
-        "LINE": "Line",
-        "AREA": "Area",
-        "COLUMN": "Column",
-        "BAR": "Bar",
-        "MIXED": "Mixed",
-        "TIMELINE": "Timeline",
-        "RANGEAREA": "Range Area",
-        "FUNNEL": "Funnel",
-        "CANDLSTICK": "Candlstick",
-        "BOXPLOT": "Boxplot",
-        "BUBBLE": "Bubble",
-        "SCATTER": "Scatter",
-        "HEATMAP": "Heatmap",
-        "TREEMAP": "Treemap",
-        "PIE": "Pie",
-        "RADIALBAR": "Radialbar",
-        "RADAR": "Radar",
-        "POLARAREA": "Polar Area",
-        "CHARTJS": "Chartjs",
-        "ECHARTS": "Echarts"
-      }
+    "TRANSPORTATION": {
+      "TEXT": "Transportation",
+      "LIST": {}
     },
-    "ICONS": {
-      "TEXT": "Icons",
+    "USERS": {
+      "TEXT": "Users",
       "LIST": {
-        "REMIX": "Remix",
-        "BOXICONS": "Boxicons",
-        "MATERIALDESIGN": "Material Design",
-        "LINEAWESOME": "Line Awesome",
-        "FEATHER": "Feather",
-        "CRYPTOSVG": "Crypto SVG"
-      }
-    },
-    "MAPS": {
-      "TEXT": "Maps",
-      "LIST": {
-        "GOOGLE": "Google",
-        "VECTOR": "Vector",
-        "LEAFLET": "Leaflet"
-      }
-    },
-    "MULTILEVEL": {
-      "TEXT": "Multi Level",
-      "LIST": {
-        "LEVEL1": {
-          "1": "Level 1.1",
-          "2": "Level 1.2",
-          "LEVEL2": {
-            "1": "Level 2.1",
-            "2": "Level 2.2"
-          }
-        }
+        "ROLES": "Roles",
+        "USERSACCESS": "User Access"
       }
     }
   }
