feat: Add exam types and academics menu items

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,9 @@
         "SUBJECTS": "Subjects",
         "GRADING": "Grading",
         "COURSES": "Courses",
-        "SCHOOL": "School"
+        "SCHOOL": "School",
+        "ACADEMICS": "Academics",
+        "EXAMTYPES": "Exam Types"
       }
     },
     "GRADING": {
@@ -49,7 +51,6 @@
       "TEXT": "Parents"
     },
     "ACADEMICS": {
-      "TEXT": "Academics",
       "LIST": {
         "ACADEMICYEARS": "Years",
         "ACADEMICTERMS": "Terms",
