feat: Add admission menu item

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
     "CONFIGURATIONS": {
       "TEXT": "Configurations",
       "LIST": {
+        "ADMISSION": "Admission",
         "CLASSES": "Classes",
         "SECTIONS": "Sections",
         "SUBJECTS": "Subjects",
