feat: Update menu items and add analytics feature
This commit refactors the menu items across different layout components (horizontal-topbar, two-column-sidebar, and sidebar) to improve clarity and consistency.

Key changes include:

-   Renamed "Staff" to "Employees" in the personnel menu.
-   Updated icons for several menu items for better visual representation.
-   Added a new "Analytics" menu item with its corresponding icon and translation keys.
-   Reorganized the "Results" menu to include "Register Results" and "Result History" as sub-items.
-   Reorganized the "More" menu to include "Parents"
-   Updated the "Library" icon.
-   Renamed "User Access" to "Manage Users" in the users menu.
-   Updated the dashboard icon.
-   Updated the logo images.

These changes enhance the user experience by providing a more intuitive and organized navigation structure.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,6 +11,9 @@
     "DASHBOARD": {
       "TEXT": "Dashboard"
     },
+    "ANALYTICS": {
+      "TEXT": "Analytics"
+    },
     "CONFIGURATIONS": {
       "TEXT": "Configurations",
       "LIST": {
@@ -37,7 +40,7 @@
     "PERSONNEL": {
       "TEXT": "Personnel",
       "LIST": {
-        "STAFF": "Staff",
+        "EMPLOYEES": "Employees",
         "TEACHERS": "Teachers"
       }
     },
@@ -109,7 +112,7 @@
       "TEXT": "Users",
       "LIST": {
         "ROLES": "Roles",
-        "USERSACCESS": "User Access"
+        "MANAGEUSERS": "Manage Users"
       }
     }
   }
