feat: Add reporting menu and update icons
This commit introduces a new "Reporting" menu item across all layout components (horizontal-topbar, two-column-sidebar, and sidebar). The reporting menu includes sub-items for Report Cards, Transcripts, and Master Sheets.

Additionally, the commit updates the following icons:

-   Replaced "ri-team-fill" with "ri-team-line" for the "Teachers", "Students", and "Users" menu items.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,9 @@
         "GRADESETUP": "Grade Setup"
       }
     },
+    "REPORTING": {
+      "TEXT": "REPORTING"
+    },
     "CORE": {
       "TEXT": "CORE"
     },
