--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -34,6 +34,9 @@
         "GRADESETUP": "Grade Setup"
       }
     },
+    "REPORTING": {
+      "TEXT": "REPORTING"
+    },
     "CORE": {
       "TEXT": "CORE"
     },
