fix: Correct French translation for Dashboard in i18n file

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -9,7 +9,7 @@
       "TEXT": "GENERAL"
     },
     "DASHBOARD": {
-      "TEXT": "Dashboard-fr"
+      "TEXT": "Dashboard"
     },
     "ANALYTICS": {
       "TEXT": "Analytics"
