feat: Add school module with configuration routing and school component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,8 +14,8 @@
     "ANALYTICS": {
       "TEXT": "Analytics"
     },
-    "CONFIGURATIONS": {
-      "TEXT": "Configurations",
+    "CONFIGURATION": {
+      "TEXT": "Configuration",
       "LIST": {
         "ADMISSION": "Admission",
         "CLASSES": "Classes",
