feat: Enhance personnel management with employee registration and CRUD functionality

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -115,7 +115,7 @@
       "TEXT": "Users",
       "LIST": {
         "ROLES": "Roles",
-        "MANAGEUSERS": "Manage Users"
+        "MANAGEUSERS": "Users"
       }
     }
   }
