--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -25,7 +25,8 @@
         "COURSES": "Courses",
         "SCHOOL": "School",
         "ACADEMICS": "Academics",
-        "EXAMTYPES": "Exam Types"
+        "EXAMTYPES": "Exam Types",
+        "ROLLOVER": "System Rollover"
       }
     },
     "GRADING": {
