--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,7 +26,7 @@
         "SCHOOL": "School",
         "ACADEMICS": "Academics",
         "EXAMTYPES": "Exam Types",
-        "ROLLOVER": "Roll Over"
+        "ROLLOVER": "System Rollover"
       }
     },
     "GRADING": {
