Add user logs menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -118,7 +118,8 @@
       "TEXT": "Users",
       "LIST": {
         "ROLES": "Roles",
-        "MANAGEUSERS": "Users"
+        "MANAGEUSERS": "Users",
+        "AUDITLOGS": "Logs"
       }
     }
   }
