--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -117,7 +117,8 @@
       "TEXT": "Users",
       "LIST": {
         "ROLES": "Roles",
-        "MANAGEUSERS": "Manage Users"
+        "MANAGEUSERS": "Manage Users",
+        "AUDITLOGS": "Logs"
       }
     }
   }
