Bug fixes to enrollment and menu changes to report menu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,6 +38,9 @@
     "REPORTING": {
       "TEXT": "REPORTING"
     },
+   "REPORTS": {
+      "TEXT": "Reports"
+    },
     "CORE": {
       "TEXT": "CORE"
     },
@@ -84,8 +87,8 @@
         "RESULTHISTORY": "Results Archive"
       }
     },
-    "REPORTS": {
-      "TEXT": "Reports",
+    "RESULTREPORTS": {
+      "TEXT": "Result Reports",
       "LIST": {
         "REPORTCARDS": "Report Cards",
         "TRANSCRIPTS": "Transcripts",
