--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -26,7 +26,7 @@
         "SCHOOL": "School",
         "ACADEMICS": "Academics",
         "EXAMTYPES": "Exam Types",
-        "SYSTEMSETTINGS": "System Settings"
+        "SYSTEMSETTINGS": "System"
       }
     },
     "GRADING": {
