Add bursary module

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -108,6 +108,12 @@
         "SUBSCRIPTIONS": "Subscriptions"
       }
     },
+    "BURSARY": {
+      "TEXT": "Bursary",
+      "LIST": {
+        "CASHDESK": "Cash Desk"
+      }
+    },
     "BOARDING": {
       "TEXT": "Boarding",
       "LIST": {}
