--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -109,6 +109,12 @@
         "SUBSCRIPTIONS": "Subscriptions"
       }
     },
+  "BURSARY": {
+      "TEXT": "Bursary",
+      "LIST": {
+        "CASHDESK": "Cash Desk"
+      }
+    },
     "BOARDING": {
       "TEXT": "Boarding",
       "LIST": {}
