Add Files menu item and permissions to SchoolMenuEnum and PermissionActionEnum

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -138,6 +138,10 @@
         "MANAGEUSERS": "Users",
         "AUDITLOGS": "Logs"
       }
+    },
+   "FILES": {
+      "TEXT": "Files",
+      "LIST": {}
     }
   }
 }
